# myautomation

./: .gitignore  document.txt  file1.txt  file2.txt  pyproject.toml  simpleid_test.txt
app/: camera_grab.py  device_registry.py  grab_state.py  main.py
app/config/: store.py
app/discovery/: mdns.py
app/modes/: state_machine.py
app/security/: handshake.py  identity.py  trust_store.py
app/transfer/: auth.py  client.py  server.py
